# perpetra

./: README.md  notes.md
backend-rs/: Cargo.toml
backend-rs/src/: main.rs  oracle.rs  order.rs  position.rs  state.rs  types.rs
backend-rs/src/domain/: mod.rs  oracle.rs  order.rs  position.rs  utils.rs  wallet.rs
backend-rs/src/handlers/: mod.rs  order.rs  websocket.rs
bot-swarm/: go.mod  main.go
bots/: main.py
frontend/: ;
frontend/src/: types.ts
frontend/src/app/: page.tsx
