[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8.4", features = ["ws"]}
rand = "0.9.1"
rand_distr = "0.5.1"
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
uuid = {version = "1.17.0", features = ["v4"]}
